Realizado modificações no arquivo principal e criado 2 pastas nvas, também melhorado o header

--- a/Dicionário das Tags.html
+++ b/Dicionário das Tags.html
@@ -9,7 +9,8 @@
 <meta name="title" content="Tags e Descrições">
 <meta name="author" content="Samuel Johnson">
 
-<link rel="stylesheet" href="estilopaginaprincipal.css">
+<link rel="stylesheet" href="_css/estilo_pagina_principal.css">
+<link rel="stylesheet" href="_css/estilo_dos_ids_pg_principal.css">
 
 <title>Dicionário HTML</title>
 </head>
@@ -17,18 +18,49 @@
 <body>
 
 <header>
-
-<div>
-[ICONE]
-</div>
+<div id="local_logo">
+<img id="logo" src="_imagens/logo2.png">
 
 <form>
 <input type="search" value="Pesquise aqui">
-<button type="button">Buscar</button>
+<button type="button" class="busca">Buscar</button>
 </form>
 
-<div id="alfabeto">
-A B C D E F G H I J K L M N O P Q R S T U V W X Y Z 
+</div>
+
+
+
+<div id="contem_alfabeto">
+
+<ul id="alfabeto">
+<li>A</li>
+<li>B</li>
+<li>C</li>
+<li>D</li>
+<li>E</li>
+<li>F</li>
+<li>G</li>
+<li>H</li>
+<li>I</li>
+<li>J</li>
+<li>K</li>
+<li>L</li>
+<li>M</li>
+<li>N</li>
+<li>O</li>
+<li>P</li>
+<li>Q</li>
+<li>R</li>
+<li>S</li>
+<li>T</li>
+<li>U</li>
+<li>V</li>
+<li>W</li>
+<li>X</li>
+<li>Y</li>
+<li>Z</li>
+</ul>
+
 </div>
 
 </header>
